add new screen to add item

--- a/Aplikacja/app/src/main/res/values/strings.xml
+++ b/Aplikacja/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">QE 2016</string>
     <string name="add">Add</string>
+    <string name="priority">Priority: %s</string>
+    <string name="category">Category: %s</string>
+    <string name="nameHint">Name</string>
+    <string name="categoryTitle">Category</string>
+    <string name="priorityTitle">Priority</string>
 </resources>
