display snackbar when name is empty

--- a/Aplikacja/app/src/main/res/values/strings.xml
+++ b/Aplikacja/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="nameHint">Name</string>
     <string name="categoryTitle">Category</string>
     <string name="priorityTitle">Priority</string>
+    <string name="snackbarText">Fill the name field!</string>
 </resources>
